--- a/src/main/resources/templates/hello_page.html
+++ b/src/main/resources/templates/hello_page.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}" />
 </head>
-<body ng-app="springDemo" >
-<div class="petro" ng-controller="AppCtrl" style="margin-left: 5%; margin-right: 5%">
-  Пошук:  <input type ="text" ng-model="query">
-    <div class="panel-body">
-    <div class="row">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <table class="table table-striped table table-hover table-bordered ">
+<body ng-app="springDemo" style="margin-left: 5%; margin-right: 5% ; margin-top: 20px">
+<div  ng-controller="AppCtrl" style="container;">
+    <input placeholder="Пошук..." type ="text" ng-model="query">
+                    <table class="table-striped  table-hover table-bordered table" style="margin-right: 5%;" >
                         <thead style="background-color: #a8e3f1;">
                         <tr>
                             <th><a href="" ng-click="sort('tittle')">Тема</a></th>
@@ -37,12 +34,10 @@
                         </tr>
                         </tbody>
                     </table>
-            </div>
-        </div>
-    </div>
 </div>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-<script type="text/javascript" src="js/head.js"></script>
+<script type="text/javascript" src="../static/js/angular.min.js"
+        th:src="@{/js/angular.min.js}"></script>
+<script type="text/javascript" src="../static/js/head.js"
+        th:src="@{/js/head.js}"></script>
 </body>
 </html>
